[gd_scene load_steps=51 format=3 uid="uid://bgvxs2hpeuie5"]

[ext_resource type="Texture2D" uid="uid://b1eragnk7dlxt" path="res://Assets/Characters/Skeleton/Skeleton enemy.png" id="1_aapjb"]
[ext_resource type="Script" path="res://Objects/skenemy.gd" id="2_y2alf"]
[ext_resource type="AudioStream" uid="uid://df8msnh5nji8s" path="res://Assets/Sounds/swing2.mp3" id="3_qr3px"]
[ext_resource type="AudioStream" uid="uid://0qcuqkwagp26" path="res://Assets/Sounds/skeledead.mp3" id="4_5b76v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g6wst"]
atlas = ExtResource("1_aapjb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ewxi"]
atlas = ExtResource("1_aapjb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j16yg"]
atlas = ExtResource("1_aapjb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5f1m"]
atlas = ExtResource("1_aapjb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyd6s"]
atlas = ExtResource("1_aapjb")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhvc2"]
atlas = ExtResource("1_aapjb")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_td8u5"]
atlas = ExtResource("1_aapjb")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh2vq"]
atlas = ExtResource("1_aapjb")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lxoe"]
atlas = ExtResource("1_aapjb")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7y05"]
atlas = ExtResource("1_aapjb")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bev5q"]
atlas = ExtResource("1_aapjb")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0m4j"]
atlas = ExtResource("1_aapjb")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0to31"]
atlas = ExtResource("1_aapjb")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ub8s"]
atlas = ExtResource("1_aapjb")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob8yd"]
atlas = ExtResource("1_aapjb")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhm4y"]
atlas = ExtResource("1_aapjb")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uyor"]
atlas = ExtResource("1_aapjb")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwfot"]
atlas = ExtResource("1_aapjb")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4sq8"]
atlas = ExtResource("1_aapjb")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65apa"]
atlas = ExtResource("1_aapjb")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwjwk"]
atlas = ExtResource("1_aapjb")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w6na"]
atlas = ExtResource("1_aapjb")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_et6cm"]
atlas = ExtResource("1_aapjb")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kijaq"]
atlas = ExtResource("1_aapjb")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2vhe"]
atlas = ExtResource("1_aapjb")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xgkm"]
atlas = ExtResource("1_aapjb")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_unkli"]
atlas = ExtResource("1_aapjb")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmyfq"]
atlas = ExtResource("1_aapjb")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_umkdh"]
atlas = ExtResource("1_aapjb")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gx0q"]
atlas = ExtResource("1_aapjb")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2menb"]
atlas = ExtResource("1_aapjb")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0c6v"]
atlas = ExtResource("1_aapjb")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ief85"]
atlas = ExtResource("1_aapjb")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx5n1"]
atlas = ExtResource("1_aapjb")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8xpw"]
atlas = ExtResource("1_aapjb")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdy0i"]
atlas = ExtResource("1_aapjb")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiir2"]
atlas = ExtResource("1_aapjb")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2hyd"]
atlas = ExtResource("1_aapjb")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_boi10"]
atlas = ExtResource("1_aapjb")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkkaw"]
atlas = ExtResource("1_aapjb")
region = Rect2(704, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5qcbl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6wst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ewxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j16yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5f1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyd6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhvc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td8u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh2vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lxoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7y05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bev5q")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0m4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0to31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ub8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob8yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhm4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uyor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwfot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4sq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65apa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwjwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w6na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et6cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kijaq")
}],
"loop": false,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2vhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xgkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unkli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmyfq")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umkdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gx0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2menb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0c6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ief85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8xpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdy0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiir2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2hyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boi10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkkaw")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_fnp3o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2cwqy"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.733333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.733333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tlsvi"]
_data = {
"RESET": SubResource("Animation_fnp3o"),
"attack": SubResource("Animation_2cwqy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdpmy"]
size = Vector2(5.8, 6.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep7oy"]
size = Vector2(10.76, 4.64)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(-5, 5)
script = ExtResource("2_y2alf")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
z_index = -3
sprite_frames = SubResource("SpriteFrames_5qcbl")
animation = &"attack"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
libraries = {
"": SubResource("AnimationLibrary_tlsvi")
}

[node name="Hurtbox" type="Area2D" parent="." groups=["EnemyHurtbox"]]
scale = Vector2(5, 5)
collision_layer = 2
collision_mask = 0

[node name="Hurtcollider" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1.1, -0.0999999)
shape = SubResource("RectangleShape2D_fdpmy")

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyAttack"]]
scale = Vector2(5, 5)
monitoring = false
monitorable = false

[node name="Hitcollider" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.58, -0.88)
shape = SubResource("RectangleShape2D_ep7oy")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qr3px")
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5b76v")
bus = &"SFX"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
